@@ -11,6 +11,7 @@
 * Implemented io::InSharedMemoryStream class for shared access to the data.
 * Deprecated io::IOutStream::writeb() function, use io::IOutStream::write_byte() instead.
 * Added support of SFZ file format parsing.
+* Updated build scripts.
 
 === 1.0.11 ===
 * Added io::InMemoryStream::size() method for obtaining the size of the wrapped buffer.
